feat:Added the objectives

--- a/jeniffer.ipynb
+++ b/jeniffer.ipynb
@@ -4,6 +4,86 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# House Sale Analysis & Regression Model For King County"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Project Review"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Business Problem"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Compass homeowners real estate agency is having a challenge providing insight to homeowners regarding house pricing and home renovations. This is after the customer query department noted an influx in the number of queries pertaining to the the pricing and price impact after renovations. The agency needs to develop a predictive model that can accurately estimate the impact of various renovation projects on a home's market value within the region.\n",
+    "\n",
+    "#### The goal is to offer data-driven recommendations to homeowners, enabling them to make informed decisions about which renovations to undertake and how these renovations will affect the resale value of their homes.\n",
+    "\n",
+    "#### The questions to be answered are:\n",
+    "\n",
+    "#### 1. What is the most significant factor that influences the house pricing in the region? \n",
+    "#### 2. What other features when put into consideration could inmprove the pricing and yield higher returns? \n",
+    "#### 3. How much can a homeowner expect the value of their home to increase after a specific renovation project?\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Data Understanding"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### The King County House Sales dataset is used for this analysis. The file contains information on over 21,000 housing units. The data is organized into a dataframe with several columns containing information on the housing units. See the columns contained in the dataset along with their descriptions:\n",
+    "\n",
+    "* **id** - Unique identifier for a house\n",
+    "* **date** - Date house was sold\n",
+    "* **price** - Sale price (prediction target)\n",
+    "* **bedrooms** - Number of bedrooms\n",
+    "* **bathrooms** - Number of bathrooms\n",
+    "* **sqft_living** - Square footage of living space in the home\n",
+    "* **sqft_lot** - Square footage of the lot\n",
+    "* **floors** - Number of floors (levels) in house\n",
+    "* **waterfront** - Whether the house is on a waterfront Includes Duwamish, Elliott Bay, Puget Sound, Lake Union, Ship Canal, Lake Washington, Lake Sammamish, other lake, and river/slough waterfronts\n",
+    "* **view** - Quality of view from house Includes views of Mt. Rainier, Olympics, Cascades, Territorial, Seattle Skyline, Puget Sound, Lake Washington, Lake Sammamish, small lake / river / creek, and other\n",
+    "* **condition** - How good the overall condition of the house is. Related to maintenance of house. See the King County Assessor Website for further explanation of each condition code\n",
+    "* **grade** - Overall grade of the house. Related to the construction and design of the house. See the King County Assessor Website for further explanation of each building grade code\n",
+    "* **sqft_above** - Square footage of house apart from basement\n",
+    "* **sqft_basement** - Square footage of the basement\n",
+    "* **yr_built** - Year when house was built\n",
+    "* **yr_renovated** - Year when house was renovated\n",
+    "* **zipcode** - ZIP Code used by the United States Postal Service\n",
+    "* **lat** - Latitude coordinate\n",
+    "* **long** - Longitude coordinate\n",
+    "* **sqft_living15** - The square footage of interior housing living space for the nearest 15 neighbors\n",
+    "* **sqft_lot15** - The square footage of the land lots of the nearest 15 neighbors\n",
+    "#### The columns used in the analysis are:\n",
+    "\n",
+    "* price - Predictor Variable\n",
+    "* condition\n",
+    "* bedrooms\n",
+    "* bathrooms\n",
+    "* sqft_living\n",
+    "* floors"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Import Libraries"
    ]
   },
