--- a/brian.ipynb
+++ b/brian.ipynb
@@ -1286,6 +1286,106 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    " - Train Test Split"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Splitting the data into training and testing sets\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    " - Modeling"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "LinearRegression()"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Creating and fitting the linear regression model\n",
+    "model = LinearRegression()\n",
+    "model.fit(X_train, y_train)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    " - Prediction"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Making predictions on the test set\n",
+    "y_pred = model.predict(X_test)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    " - Model Validation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MAE: 175182.34574170274\n",
+      "MSE: 71042945521.49646\n",
+      "R2: 0.5025014979925682\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Calculating Mean Absolute Error (MAE)\n",
+    "mae = mean_absolute_error(y_test, y_pred)\n",
+    "\n",
+    "# Calculating Mean Squared Error (MSE)\n",
+    "mse = mean_squared_error(y_test, y_pred)\n",
+    "\n",
+    "# Calculating R-squared (R2) score\n",
+    "r2 = r2_score(y_test, y_pred)\n",
+    "\n",
+    "print(f'MAE: {mae}')\n",
+    "print(f'MSE: {mse}')\n",
+    "print(f'R2: {r2}')\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Modelling"
    ]
   },
