--- a/faith.ipynb
+++ b/faith.ipynb
@@ -1579,7 +1579,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1756,7 +1756,7 @@
        "6        6819      1715.0   29              0  "
       ]
      },
-     "execution_count": 28,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1774,7 +1774,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1977,13 +1977,13 @@
        "[15762 rows x 9 columns]"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Select features based on correlation and EDA\n",
+    "\n",
     "features = ['bedrooms', 'bathrooms', 'sqft_living', 'sqft_lot', 'floors', 'condition', 'grade', 'age', 'was_renovated']\n",
     "X = df[features]\n",
     "y = df['price']\n",
@@ -2000,7 +2000,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -2016,17 +2016,17 @@
     "from sklearn.linear_model import LinearRegression\n",
     "from sklearn.metrics import mean_squared_error, r2_score\n",
     "\n",
-    "# Split the data into training and testing sets\n",
+    "# Splitting the data into training and testing sets\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
     "\n",
-    "# Initialize and train the linear regression model\n",
+    "# Initializing the train with the linear regression model\n",
     "lr = LinearRegression()\n",
     "lr.fit(X_train, y_train)\n",
     "\n",
-    "# Make predictions on the test set\n",
+    "# prediction\n",
     "y_pred = lr.predict(X_test)\n",
     "\n",
-    "# Evaluate the model\n",
+    "# Evaluating the model\n",
     "mse = mean_squared_error(y_test, y_pred)\n",
     "r2 = r2_score(y_test, y_pred)\n",
     "print(f'Initial Model - Mean Squared Error: {mse}, R² Score: {r2}')\n"
@@ -2035,11 +2035,14 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "#### Iterative modeling\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -2071,33 +2074,29 @@
     "from sklearn.preprocessing import PolynomialFeatures\n",
     "from sklearn.linear_model import Ridge, Lasso\n",
     "\n",
-    "# Add polynomial features\n",
     "poly = PolynomialFeatures(degree=2, include_bias=False)\n",
     "X_poly = poly.fit_transform(X)\n",
     "\n",
-    "# Split the polynomial features into training and testing sets\n",
     "X_train_poly, X_test_poly, y_train_poly, y_test_poly = train_test_split(X_poly, y, test_size=0.2, random_state=42)\n",
     "\n",
-    "# Initialize and train a Ridge regression model\n",
     "ridge = Ridge(alpha=1.0)\n",
     "ridge.fit(X_train_poly, y_train_poly)\n",
     "\n",
-    "# Make predictions on the test set\n",
+    "# Prediction \n",
     "y_pred_poly = ridge.predict(X_test_poly)\n",
     "\n",
-    "# Evaluate the model\n",
+    "# model evaluation\n",
     "mse_poly = mean_squared_error(y_test_poly, y_pred_poly)\n",
     "r2_poly = r2_score(y_test_poly, y_pred_poly)\n",
     "print(f'Polynomial Model - Mean Squared Error: {mse_poly}, R² Score: {r2_poly}')\n",
     "\n",
-    "# Initialize and train a Lasso regression model\n",
+    "# Initialize and training regression model\n",
     "lasso = Lasso(alpha=0.1)\n",
     "lasso.fit(X_train_poly, y_train_poly)\n",
     "\n",
-    "# Make predictions on the test set\n",
+    "# Predictions on the test set\n",
     "y_pred_lasso = lasso.predict(X_test_poly)\n",
     "\n",
-    "# Evaluate the model\n",
     "mse_lasso = mean_squared_error(y_test_poly, y_pred_lasso)\n",
     "r2_lasso = r2_score(y_test_poly, y_pred_lasso)\n",
     "print(f'Lasso Model - Mean Squared Error: {mse_lasso}, R² Score: {r2_lasso}')\n"
@@ -2105,7 +2104,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Final model and Interpretation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -2221,48 +2229,35 @@
        "21         bathrooms floors  -31527.643367    31527.643367"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Select the best model based on evaluation metrics\n",
+    "#Final model and Interpretation\n",
     "best_model = ridge if r2_poly > r2_lasso else lasso\n",
     "\n",
-    "# Fit the best model on the entire dataset\n",
     "best_model.fit(X_poly, y)\n",
     "\n",
-    "# Get feature names for polynomial features\n",
     "feature_names = poly.get_feature_names(features)\n",
     "\n",
-    "# Get the coefficients of the best model\n",
     "coefficients = best_model.coef_\n",
     "\n",
-    "# Create a dataframe to interpret the coefficients\n",
     "coef_df = pd.DataFrame({'Feature': feature_names, 'Coefficient': coefficients})\n",
     "\n",
-    "# Sort coefficients by absolute value\n",
     "coef_df['AbsCoefficient'] = coef_df['Coefficient'].abs()\n",
     "coef_df = coef_df.sort_values(by='AbsCoefficient', ascending=False)\n",
     "\n",
-    "# Display the top 10 most important features\n",
     "coef_df.head(10)\n"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### RECOMMENDATIONS"
+   ]
   }
  ],
  "metadata": {
