Modified the README.MD file

--- a/.MD
+++ b/.MD
@@ -69,9 +69,12 @@
 ![alt text](image-5.png)
 ![alt text](image-6.png)
 ![alt text](image-7.png)
+![alt text](image-8.png)
 ![alt text](image-9.png)
-![alt text](image.png)
 ![alt text](image-10.png)
+![alt text](image-11.png)
+![alt text](image-12.png)
+![alt text](image-13.png)
 * The plots show the regression with the different independent variables as highlighted on the title.
 * The Q-Q plots are also used to visualize the normality of the variables - we note that sqft_living performs better in terms of normality test than the other variables.
 ### Conclusion
