--- a/.MD
+++ b/.MD
@@ -46,16 +46,16 @@
 ### Getting Started
 #### Upon carefully choosing, analyzing, cleansing, and generating descriptive statistics, we developed several visualizations that elaborately showed the correlation of each feature in relation to price. These visual representations stem from the selection of relevant columns in our dataset and offered valuable insights for the project.
 ### Visualization
-![alt text](../images/image.png)
+![alt text](image-2.png)
 #### From the above scatter plot, we observe that sqft_living has a continuous positive correlation with price.
 ### Modeling
 #### Baseline Model: Simple Linear Regression
-![alt text](../images/image-1.png)
+![alt text](image.png)
 #### Since sqft_living was the feature with the strongest correlation, we built a simple linear regression with that. We built a simple linear regression model (Model: OLS) with 'sqft_living' as the only independent variable. From our model, for each additional square foot of living space, the 'price' is expected to increase by  258,500 units when all other factors remain constant.
 ### Simple Linear Regression Visualization
-![alt text](../images/image-2.png)
+![alt text](image-1.png)
 #### Partial Regression Plot / Plotting Residuals
-![alt text](../images/image-3.png)
+![alt text](image.png)
 * The image shows a plot of the regression with the "sqft_living" as the exogenous variable
 * Plot 1: The dependent variable vs. sqft_living with the regression line.
 * Plot 2: Residuals vs. sqft_living to check for homoscedasticity (constant variance of residuals).
