Feature engineering Model 1

--- a/brian.ipynb
+++ b/brian.ipynb
@@ -1024,7 +1024,7 @@
     }
    ],
    "source": [
-    "8# Plotting box plots for each column\n",
+    "# Plotting box plots for each column\n",
     "plt.figure(figsize=(10, 6))\n",
     "sns.boxplot(data=df)\n",
     "plt.title('Box plots of Selected Columns')\n",
