--- a/.MD
+++ b/.MD
@@ -1,115 +1,190 @@
-# House Sale Analysis & Regression Model For King County
-## Project Review
+# **Final Project Submission**
+
+**Students names:** 
+ - BRIAN KARIUKI
+ - ISAAC WANG'ANG'A
+ - FAITH MUTISYA
+ - PAMELA CHEBII
+ - JENIFFER GATHARIA
+
+Student pace: part time
+
+Scheduled project review date/time: 19/07/2024
+
+Instructor name: SAMUEL G MWANGI, SAMUEL KARU AMD WINNIE ANYOSO
+
+# **House Sale Analysis & Regression Model For King County**
+## **Business Understanding**
+### Introduction
+ In the vibrant housing market of King County, understanding the factors that influence home prices is essential for real estate professionals, homeowners, and potential buyers. As the region continues to grow and evolve, stakeholders must analyze the dynamics of the housing landscape to make informed decisions. 
+ 
+ This project aims to analyze the King County House Sales dataset to uncover key determinants of housing prices. For this project, we will use both linear and multi-linear regression modeling to analyze house sales in King County, a northwestern county in Washington State
 ### Business Problem
-#### Compass homeowners real estate agency is having a challenge providing insight to homeowners regarding house pricing and home renovations. This is after the customer query department noted an influx in the number of queries pertaining to the the pricing and price impact after renovations. The agency needs to develop a predictive model that can accurately estimate the impact of various renovation projects on a home's market value within the region.
+A real estate agency is having a challenge providing insight to homeowners regarding house pricing and home renovations. This is after the customer query department noted an influx in the number of queries pertaining to the the pricing and price impact after renovations. The agency needs to develop a predictive model that can accurately estimate the impact of various renovation projects on a home's market value within the region.
 
-#### The goal is to offer data-driven recommendations to homeowners, enabling them to make informed decisions about which renovations to undertake and how these renovations will affect the resale value of their homes.
+The goal is to offer data-driven recommendations to homeowners, enabling them to make informed decisions about which renovations to undertake and how these renovations will affect the resale value of their homes.
 
-#### The questions to be answered are:
+This project aims to address the following key objectives:
 
-#### 1. What is the most significant factor that influences the house pricing in the region? 
-#### 2. What other features when put into consideration could improve the pricing and yield higher returns? 
-#### 3. How much can a homeowner expect the value of their home to increase after a specific renovation project?
-### Data Understanding
-#### The King County House Sales dataset is used for this analysis. The file contains information on over 21,000 housing units. The data is organized into a dataframe with several columns containing information on the housing units. See the columns contained in the dataset along with their descriptions:
+1. **Analyze the Impact of Square Footage on Housing Prices:** Use simple linear regression to evaluate how sqft_living and sqft_above individually impact house prices in King County. This will quantify the relationship between square footage and property values, providing clear insights for homeowners and real estate investors.
 
-* **id** - Unique identifier for a house
-* **date** - Date house was sold
-* **price** - Sale price (prediction target)
-* **bedrooms** - Number of bedrooms
-* **bathrooms** - Number of bathrooms
-* **sqft_living** - Square footage of living space in the home
-* **sqft_lot** - Square footage of the lot
-* **floors** - Number of floors (levels) in house
-* **waterfront** - Whether the house is on a waterfront Includes Duwamish, Elliott Bay, Puget Sound, Lake Union, Ship Canal, Lake Washington, Lake Sammamish, other lake, and river/slough waterfronts
-* **view** - Quality of view from house Includes views of Mt. Rainier, Olympics, Cascades, Territorial, Seattle Skyline, Puget Sound, Lake Washington, Lake Sammamish, small lake / river / creek, and other
-* **condition** - How good the overall condition of the house is. Related to maintenance of house. See the King County Assessor Website for further explanation of each condition code
-* **grade** - Overall grade of the house. Related to the construction and design of the house. See the King County Assessor Website for further explanation of each building grade code
-* **sqft_above** - Square footage of house apart from basement
-* **sqft_basement** - Square footage of the basement
-* **yr_built** - Year when house was built
-* **yr_renovated** - Year when house was renovated
-* **zipcode** - ZIP Code used by the United States Postal Service
-* **lat** - Latitude coordinate
-* **long** - Longitude coordinate
-* **sqft_living15** - The square footage of interior housing living space for the nearest 15 neighbors
-* **sqft_lot15** - The square footage of the land lots of the nearest 15 neighbors
-### Data Understanding
-#### This project uses the King County House Sales dataset, found in kc_house_data.csv. The file contains information on over 21,000 housing units. The data is organized into a data frame with several columns containing information on the housing units. The columns we used in the analysis are:
+2. **Identify Key Determinants of Housing Prices:** Utilize multiple linear regression modeling to analyze the King County House Sales dataset and determine the primary factors that influence housing prices.
 
-* **price** - Sale price (prediction target) Predictor Variable
-* **condition** - How good the overall condition of the house is. Related to the maintenance of the house.
-* **bedrooms** - Number of bedrooms
-* **bathrooms** - Number of bathrooms
-* **sqft_living** - Square footage of living space in the home
-* **floors** - Number of floors (levels) in house
-### Getting Started
-#### Upon carefully choosing, analyzing, cleansing, and generating descriptive statistics, we developed several visualizations that elaborately showed the correlation of each feature in relation to price. These visual representations stem from the selection of relevant columns in our dataset and offered valuable insights for the project.
-### Visualization
+3. **Develop Predictive Model for House Pricing:** Create and refine a predictive model using multiple linear regression to accurately estimate house prices based on the identified key features. This model will assist real estate professionals and homeowners in making informed pricing and investment decisions, enhancing the efficiency and effectiveness of the home buying and selling process.
+
+## **Data Understanding**
+This project employs the King County House Sales dataset, found in the kc_house_data.csv file. The dataset encompasses a range of features related to house sales, including square footage, the number of bedrooms and bathrooms, waterfront presence, view quality, year built, and renovation status. It also includes the sale price of each property, which we use as the dependent variable in our regression analysis. Detailed descriptions of the columns are available in the column_names.md file. The goal is to use this comprehensive dataset to understand and quantify the effects of various home renovations on property values.
+
+## **Data Description**
+
+- **Number of Rows (Observations):** There are 21597 rows in the DataFrame.
+- **Number of Columns (Variables):** There are 21 columns (or variables) in the DataFrame.
+
+### King County Housing Dataset Column Descriptions
+
+1. id - Unique identifier for a house
+2.	date - Date when the house was sold
+3.	price - Sale price of the house
+4.	bedrooms - Number of bedrooms in the house
+5.	bathrooms - Number of bathrooms in the house
+6.	sqft_living - Square footage of the interior living space
+7.	sqft_lot - Square footage of the lot
+8.	floors - Number of floors (levels) in the house
+9.	waterfront - Indicates whether the house has a view of the waterfront
+10.	view - Number of times the house has been viewed
+11.	condition - Overall condition of the house
+12.	grade - Overall grade of the house based on the King County grading system
+13.	sqft_above - Square footage of the house apart from the basement
+14.	sqft_basement - Square footage of the basement
+15.	yr_built - Year the house was built
+16.	yr_renovated - Year the house was renovated
+17.	zipcode - ZIP code of the house's location
+18.	lat - Latitude coordinate of the house
+19.	long - Longitude coordinate of the house
+20.	sqft_living15 - Square footage of interior living space for the nearest 15 neighbors
+21.	sqft_lot15 - Square footage of the land lots of the nearest 15 neighbors
+
+### Limitations of the Data
+
+Missing Values: Some columns contain missing values (waterfront, view and  yr_renovated), which could impact the completeness and reliability of our findings.
+
+Omitted Variables: The dataset might lack certain relevant variables, potentially affecting the thoroughness of our analysis.
+
+Accuracy Concerns: There may be accuracy issues within the data, as the specifics of the data collection processes are not disclosed, potentially affecting the validity of the analysis.
+
+
+Key Columns Description
+
+- Price: The average price of the houses is approximately $540,297, with a standard deviation of $367,368. The prices range from $78,000 to $7,700,000.
+
+- Bathrooms: On average, houses have around 2.12 bathrooms, with a standard deviation of 0.77. The minimum number of bathrooms is 0.5, and the maximum is 8.
+
+- Square Foot Living (sqft_living): The average square footage of the living area is 2,080.32 sq ft, with a standard deviation of 918.11 sq ft. The living areas range from 370 to 13,540 sq ft.
+
+- Grade: The average grade of houses, which reflects overall quality, is 7.66, with a standard deviation of 1.17. The grades range from 3 to 13.
+
+- Square Foot Above Ground (sqft_above): The average square footage above ground is 1,788.60 sq ft, with a standard deviation of 827.76 sq ft. The range is from 370 to 9,410 sq ft.
+
+- Bedrooms: Houses have an average of 3.37 bedrooms, with a standard deviation of 0.93. The number of bedrooms varies from 1 to 33.
+
+## Data Preparation
+The data preparation process involved several critical steps to ensure data quality and relevance for modeling. Initially, the data was inspected for duplicates and missing values. No duplicates were found, and missing values were identified in three columns: waterfront, view, and yr_renovated. Missing values for categorical data (waterfront and view) were filled using the mode, while numerical data (yr_renovated) was filled using the mean. Features were selected based on correlation analysis and domain knowledge. The selected features for modeling included sqft_living, grade, sqft_above, and bathrooms, all of which showed significant positive correlations with the target variable (price) and were practically relevant in real estate valuation. To avoid clutter, pair plots and heatmaps visualization were generated for the selected features, further highlighting their relationships with price and identifying potential multicollinearity issues, particularly between sqft_living and sqft_above.
+
+### Pairplot (Correlation)
+![alt text](<Pairplot_selected features.png>)
+
+Outliers were examined using box plots, revealing their presence across all selected features. And since outliers, especially on the higher end, could skew data distribution and impact model accuracy, we capped them while iterating the models to observe their impact. The comprehensive data preparation ensures that the selected features are relevant and that any data anomalies are addressed, laying a solid foundation for the subsequent modeling process.
+
+#### Box Plots (Outliers)
+![alt text](Outliers.png)
+
+##### Correlation Heatmap
 ![alt text](image.png)
-#### From the above scatter plot, we observe that sqft_living has a continuous positive correlation with price.
-### Modeling
-#### Baseline Model: Simple Linear Regression
+
+## Feature Selection
+
+Based on correlation analysis and domain knowledge, we recommnded below features for our model due to their potential impact on the target variable (price) and their practical relevance in real estate valuation.
+
+After analyzing the correlation heatmap, it is evident that the most important features influencing house prices are `bathrooms`, `sqft_living`, `grade`, `sqft_above` and `bedrooms`. This conclusion is based on their strong correlation values with the `price` variable. 
+
+- `bathrooms` (0.53): Indicates a moderate positive correlation, suggesting that houses with more bathrooms tend to have higher prices.
+- `sqft_livin`g (0.70): Shows a strong positive correlation, meaning that larger living areas significantly increase house prices.
+- `Grade` (0.67): Demonstrates a strong positive correlation, implying that higher quality and better-graded houses are priced higher.
+- `sqft_above` (0.61): Reflects a strong positive correlation, indicating that houses with more above-ground living space are more expensive.
+- `bedrooms` (0.31): This shows a moderate correlation with price. However, using domain knowledge, it is likely that houses with more bedrooms fetch higher prices in the market.
+- `View` (0.39)- It has a moderate correlation with price. However, based on domain knowledge, houses with a good view are likely to fetch hihger prices than those without a view.
+
+These correlation values highlight the significant impact of these features on house prices, guiding homeowners and real estate professionals in their decision-making processes.
+
+### Pairplot
+
 ![alt text](image-1.png)
-#### Since sqft_living was the feature with the strongest correlation, we built a simple linear regression with that. We built a simple linear regression model (Model: OLS) with 'sqft_living' as the only independent variable. From our model, for each additional square foot of living space, the 'price' is expected to increase by  258,500 units when all other factors remain constant.
-#### Partial Regression Plot / Plotting Residuals
-![alt text](Images/image-2.png)
-![alt text](Images/image-3.png)
-* The image shows a plot of the regression with the "sqft_living" as the exogenous variable
-* Plot 1: The dependent variable vs. sqft_living with the regression line.
-* Plot 2: Residuals vs. sqft_living to check for homoscedasticity (constant variance of residuals).
-* Plot 3: Partial regression plot to show the relationship between price and sqft_living while accounting for other variables.
-* Plot 4: The leverage plot to detect influential data points.
-* Plot 5: The Q-Q plot to check the normality of residuals.
-#### Regression Diagnostic For The Multiple Regression
-##### Since we have a model with 1 predictor (sqft_living) as well as a model with 2 predictors we tried a model that uses all of the available numeric columns as features. The model was a multiple linear regression model (Model: OLS) with eight independent variables. So, the multiple linear regression equation based on this output is:
-##### The below model represents the relationship between the 'price' of a house and multiple independent variables, including square footage of living space ('sqft_living'), the number of bathrooms ('bathrooms'), the number of bedrooms ('bedrooms'), the number of floors ('floors'), and four categorical variables representing different conditions ('condition_Fair', 'condition_Good', 'condition_Poor', 'condition_Very Good'). Each coefficient represents the change in the 'price' associated with a one-unit change in the respective independent variable, holding all other variables constant.
-![alt text](Images/image-4.png)
-![alt text](Images/image-5.png)
-![alt text](Images/image-6.png)
-![alt text](Images/image-7.png)
-![alt text](Images/image-8.png)
-![alt text](Images/image-9.png)
-![alt text](Images/image-10.png)
-![alt text](Images/image-11.png)
-![alt text](Images/image-12.png)
-![alt text](Images/image-13.png)
-![alt text](Images/image-14.png)
-* The plots show the regression with the different independent variables as highlighted on the title.
-* The Q-Q plots are also used to visualize the normality of the variables - we note that sqft_living performs better in terms of normality test than the other variables.
+
+- The pairplot for the selected features is shown above to better understand the relationships between the features and the target variable price The scatter plots in the pairplot show linear relationships between price and the selected features, particularly for sqft_living and grade.
+
+- The Pairplot confirms that features like sqft_living, grade, and sqft_above have a stronger impact on price, while bathrooms and bedrooms show a positive but less pronounced relationship with price.
+
+
+## **Modelling**
+
+### Model 1
+
+- The R-squared value of 0.493 indicates that approximately 49.3% of the variability in house prices can be explained by the square footage of the living area (sqft_living). This suggests a moderate level of explanatory power of the model.
+
+- The model coefficients show that the intercept (const) is -43,999, which is statistically significant with a t-statistic of -9.975 and a p-value of 0.000. The coefficient for sqft_living is 280.863, also highly significant with a t-statistic of 144.819 and a p-value of 0.000, indicating a strong positive relationship between square footage and house prices.
+
+
+#### Visualizing the Relationship Between Square Foot Living and Price
+
+![alt text](image-2.png)
+- The above visualization shows the actual data estimates of the living area square footage
+
+- We note from the above that the price of the house increases as the living room square footage increases.
+
+The performance metrics for the linear regression model indicate the following:
+
+- Mean Squared Error (MSE): The MSE value of approximately 65.98 billion suggests that the model's predictions, on average, deviate from the actual house prices by a large amount when squared differences are considered. This indicates a significant error magnitude, possibly due to outliers or a wide range of house prices.
+
+- Mean Absolute Error (MAE): The MAE value of approximately 170,983 indicates that, on average, the model's predictions differ from the actual prices by around $170,983. While this provides a clearer picture of prediction accuracy than the MSE, it still points to considerable errors in prediction, which could affect decision-making.
+
+- R Squared (R²): The R² value of approximately 0.493 suggests that the model explains about 49.3% of the variance in house prices based on the predictor variables used. While this indicates a moderate fit, it also means that over 50% of the variance in house prices remains unexplained by the model, highlighting the need for additional features or more complex modeling techniques to improve predictive accuracy.
+
+Overall, these metrics suggest that while the model captures some relationships between the features and house prices, there is substantial room for improvement. The high error values and moderate R² suggest that the model could benefit from additional relevant features, better handling of outliers, or the use of more advanced modeling techniques.
+
+### **Model 2**
+
+![alt text](image-3.png)
+
+- Linearity: The plot shows a more randomly scattered pattern with no clear systematic structure, which suggests that the linearity assumption is better satisfied compared to the previous plot that exhibited a clear pattern.
+
+- Normality: The points in the Q-Q plot closely follow the red line, with slight deviations at the tails. This indicates that the residuals are approximately normally distributed, and the normality assumption is better met than in the previous plot, which showed larger deviation
+
+
+Model 2 outperforms Model 1 in all the key metrics:
+
+- Mean Squared Error (MSE): Model 2 has a lower MSE (60,197,315,834.50) compared to Model 1 (65,977,373,783.62), indicating that Model 2's predictions are closer to the actual values on average.
+
+- Mean Absolute Error (MAE): Model 2 also shows a lower MAE (158,764.49) than Model 1 (170,982.92), meaning the average absolute error of predictions in Model 2 is smaller, which generally suggests better predictive accuracy.
+
+- R Squared (R²): Model 2 has a higher R² value (0.538) compared to Model 1 (0.493), signifying that Model 2 explains a greater proportion of the variance in the target variable.
+
+Overall, Model 2 is more accurate and provides a better fit to the data compared to Model 1.
+
+## Regression Results
+
 ### Conclusion
-#### Based on the provided interpretation of the three model results and the business problem faced by the real estate agency, we can draw the following conclusions
+The analysis of the King County House Sales dataset using both simple and multiple linear regression models reveals key insights into the factors influencing housing prices. The simple linear regression highlighted the impact of square footage on property values, with sqft_living (a correlation of 0.7) showing a strong correlation with house prices. 
 
-#### Baseline Model: The baseline model, which includes only the 'sqft_living' variable, has an RMSE of approximately 261,655 USD and an R² of 0.4927. While it provides a basic estimate of home prices, it has room for improvement in both prediction accuracy and explanatory power.
 
-#### The second Model: This model includes all chosen independent variables, performs the best among the models. It has the lowest RMSE (approximately 255203.69 USD) and the highest R² (0.5174). This model demonstrates the highest prediction accuracy.
+The multiple linear regression model further refined these insights by identifying additional significant determinants such as the number of bathrooms, sqft_living, grade, sqft_above and bedrooms. These findings provide a robust foundation for understanding how different features contribute to the overall market value of homes.
 
-#### The best model chose out of the two is the second model because of:
+# Recommendations
 
-### Model Performance:
-#### The second model, which incorporates 'condition,' 'bedrooms,' 'bathrooms,' 'sqft_living,' and 'floors,' exhibits the best overall performance among the models considered.
+1. **Homeowners should invest in increasing living  area space:**
+Homeowners in King County should consider expanding their living areas, as the analysis shows the highest positive correlation with the housing price. For homeowners, this investment can significantly increase the property value.
 
-### Prediction Accuracy:
-#### The second model has the lowest Root Mean Absolute Error (MAE) of approximately 168621.5 USD, indicating the highest prediction accuracy among the models. This means that the model's predictions are, on average, the closest to the actual sale prices.
+2. **Homeowners should consider key features like housing grade, number of bathrooms, and square footage above when renovating:**
+Homeowners in King County should prioritize improvements in key determinants like housing grade, number of bathrooms, and square footage above ground to maximize property value and attract higher prices.
 
-### Explanatory Power:
-#### The second model also has the highest R-squared (R²) value of approximately 0.5174, signifying the greatest explanatory power. It explains about 51.74% of the variance in home prices, suggesting that it provides the most comprehensive understanding of the factors influencing sale values.
-
-#### The model built offers a valuable tool for the agency to formulate effective pricing strategies. It provides coefficients associated with each feature, allowing the agency to make more precise price estimates based on a property's specific attributes. Additionally, by comparing these estimated prices to real-world prices, the agency can spot instances where properties are priced too high or too low, enabling them to make appropriate adjustments to optimize their sales potential.
-
-### Recommendations
-#### Based on the the business questions and objectives of the project and the second model, which includes 'condition,' 'bedrooms,' 'bathrooms,' 'sqft_living,' and 'floors,' the following are detailed recommendations for the real estate agency Amani:
-
-#### Estimating the Impact of Specific Renovation Projects: The agency can use the second model to provide homeowners with estimates of how specific renovation projects will impact the resale value of their homes. This will assist homeowners in estimating the impact of specific renovations, create a user-friendly interface or tool where homeowners can input details about their renovation plans, such as the number of bedrooms, bathrooms, the condition of the property, square footage of living space, and the number of floors. The model can then generate predictions of the expected increase in home value after these renovations. Homeowners can make informed decisions about which renovation projects to prioritize, based on their expected return on investment (ROI). This will empower homeowners to invest in renovations that will maximize their property's resale value.
-
-#### Identifying Renovation Projects with the Most Impact: The agency can utilize the second model to identify which specific renovation projects or features have the most significant impact on a home's market value in the northwestern county. They can conduct a feature importance analysis using the second model. This analysis can highlight which variables (e.g., bedrooms, bathrooms, condition) have the most substantial influence on home prices. The model can then provide rankings or insights into which renovations or property features contribute the most to home value. By identifying the most impactful renovation projects and features, the agency can guide homeowners toward investments that are likely to yield the highest returns. This can also inform marketing strategies and property listings for sellers.
-
-#### Correlation of Bedrooms, Bathrooms, Grade, and Square Footage with Sale Price: They can leverage the second model to explain how the number of bedrooms, bathrooms, the grade of a house, and its square footage correlate with its sale price in King County. They can utilize the model's coefficients and feature importance analysis to explain the correlations between these variables and sale price. This will provide homeowners and buyers with insights into how each of these factors influences home prices, allowing them to make more informed decisions. Homeowners can understand which property features are highly valued in the real estate market, potentially guiding them in making renovations or improvements that align with market preferences. Buyers can use this information to assess property values based on their preferences and requirements.
-
-#### Identifying Combinations of Renovation Projects: The second model will help identify specific combinations of renovation projects that provide an interdependent effect on a home's market value. They can use the model to analyze the effects of combining different renovation projects. Identify combinations that result in combined effects on home values. This will provide homeowners with recommendations on the combinations of renovations that may maximize their property's resale value.
-
-#### These recommendations align with the agency's goal of offering comprehensive guidance and enhancing decision-making for clients in the real estate market.
-
-### Summary
-#### In summary, the project study suggests that the number of bedrooms, square footage of living area, condition, number of bedrooms, bathrooms and floors are important factors to consider when determining the price of a home. However, it is essential to consider other market factors and property-specific attributes in conjunction with the findings of this analysis to arrive at an accurate and competitive listing price such as architectural style, lot size and landscaping, upgrades and amenities, historical sales data, market trends, school district, crime rate, zoning and regulations.
-
+3. **Utilize Predictive Modeling for Pricing Strategies:**
+Real estate agents and homeowners should use the predictive model to evaluate renovation projects before committing resources. By inputting different renovation scenarios into the model, stakeholders can forecast the potential return on investment (ROI) and prioritize projects that offer the highest value increase.
